2017-02-13  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* misc/network.c (open_stream_connection_ext): Fix memory leak.

2017-02-12  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Module "prefs" is now in gvm-libs/base.

	* misc/prefs.c, misc/prefs.h: Removed.

	* misc/CMakeLists.txt: Removed handling of this module.

	* COPYING: Remove module from this list.

	* misc/network.c, misc/plugutils.c, nasl/exec.c, nasl/nasl.c,
	nasl/nasl_builtin_nmap.c, nasl/nasl_builtin_openvas_tcp_scanner.c,
	nasl/nasl_builtin_synscan.c, nasl/nasl_http.c,
	nasl/nasl_scanner_glue.c, nasl/nasl_ssh.c: Include
	gvm/base/prefs.h instead of misc/prefs.h.

2017-02-12  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Module "ldap_connect_auth" is now in gvm-libs/base.

	* misc/ldap_connect_auth.c, misc/ldap_connect_auth.h: Removed.

	* misc/CMakeLists.txt: Removed handling of this module. And
	also the checks for LDAP library.

	* COPYING: Remove module from this list.

	* INSTALL: Remove note on ldap library requirement.

2017-02-10  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Module "openvas_proctitle" is now in gvm-libs/base.

	* misc/openvas_proctitle.c, misc/openvas_proctitle.h: Removed.

	* misc/CMakeLists.txt: Removed handling of this module.

	* COPYING: Remove module from this list.

2017-02-10  Michael Wiegand <michael.wiegand@greenbone.net>

	* nasl/exec.c, nasl/nasl_grammar.y: Strip trailing whitespace.

2017-02-09  Juan Jose Nicola  <juan.nicola@greenbone.net>

	Add support for using GLib based logging to OpenVAS Scanner.
	Use g_message instead of log_legacy_write.

	* misc/arglists.c: Define G_LOG_DOMAIN.
	(): Use g_message instead of log_legacy_write.

	* misc/bpf_share.c: Define G_LOG_DOMAIN.
	(): Use g_message instead of log_legacy_write.

	* misc/ids_send.c: Define G_LOG_DOMAIN.
	(): Use g_message instead of log_legacy_write.

	* misc/network.c: Define G_LOG_DOMAIN.
	() Use g_message instead of log_legacy_write.