@@ -1,3 +1,7 @@
+2017-02-13  Juan Jose Nicola  <juan.nicola@greenbone.net>
+
+	* CMakeLists.txt: Remove any handling for nasl library.
+
 2017-02-13  Hani Benhabiles <hani.benhabiles@greenbone.net>
 
 	* misc/network.c (open_stream_connection_ext): Fix memory leak.
